web/libraries/fractal/components/tests/filter/fail/format-date.twig
{# Aug 7, 2019, 11:39:12 PM #}
{{ '2019-08-07 23:39:12'|format_date() }} <br>
You can tweak the output for the date part and the time part <br>

{# 23:39 #}
{{ '2019-08-07 23:39:12'|format_date('none', 'short', locale='fr') }} <br>

{# 07/08/2019 #}
{{ '2019-08-07 23:39:12'|format_date('short', 'none', locale='fr') }} <br>

{# mercredi 7 août 2019 23:39:12 UTC #}
{{ '2019-08-07 23:39:12'|format_date('full', 'full', locale='fr') }} <br>
Supported values are: none, short, medium, long, and full. <br>

For greater flexiblity, you can even define your own pattern: <br>

{# 7 août 2019 23:39:12 #}
{{ '2019-08-07 23:39:12'|format_date(locale='fr') }}

